--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
-/* common ----------------------------------------*/
+/* common ---------------------------------------*/
 * {
+  margin: 0;
   font-size: 16px;
   font-family: "Noto Sans JP light", sans-serif;
+  color: grey;
+  box-sizing: border-box;
+}
+main {
+  width: 100vw;
 }
 
 /* header ----------------------------------------*/
@@ -14,11 +20,15 @@ header {
   height: 40px;
 }
 .header__nav {
+  color: grey;
   width: 30%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   list-style-type: none;
+}
+.header__nav > li > a {
+  text-decoration: none;
 }
 
 /* topview ---------------------------------------*/
@@ -62,5 +72,164 @@ header {
   color: green;
 }
 .topview__text--description {
+  color: grey;
   margin-top: 10px;
+  font-size: 0.9rem;
+}
+
+/* news --------------------------------------------*/
+.news {
+  /* width: 100vw; */
+  margin: 80px;
+}
+.news__wrapper {
+  width: fit-content;
+  margin: 0 auto;
+}
+.news__title {
+  /* text-align: center; */
+  padding-top: 40px;
+}
+
+.news__title > p {
+  color: red;
+  font-size: 1.2rem;
+  font-family: "Architects Daughter", cursive;
+}
+.news__title > h2 {
+  font-size: 1.5rem;
+  margin-top: 16px;
+}
+.news__table {
+  width: 800px;
+  border-top: 5px solid #f2f2f2;
+  border-bottom: 5px solid #f2f2f2;
+  padding: 20px 0;
+}
+.news__table > table {
+  width: 100%;
+}
+.news__table--row {
+  width: 800px;
+}
+.news__table--row > td {
+  padding: 20px 0;
+  border-bottom: 2px solid #f2f2f2;
+}
+.news__table--tag > p {
+  width: fit-content;
+  padding: 0px 12px;
+  background-color: rgb(183, 29, 2);
+  border-radius: 10px;
+  color: #fff;
+}
+/* about --------------------------------------------*/
+.about {
+  background-color: #f2f2f2;
+  width: 100vw;
+  margin-top: 80px;
+}
+.about__title {
+  text-align: center;
+  padding-top: 40px;
+}
+
+.about__title > p {
+  color: red;
+  font-size: 1.2rem;
+  font-family: "Architects Daughter", cursive;
+}
+.about__title > h2 {
+  font-size: 1.5rem;
+  margin-top: 16px;
+}
+.about__content {
+  display: flex;
+  justify-content: space-between;
+  width: 960px;
+  margin: 20px auto;
+  padding-bottom: 40px;
+}
+.about__content--text {
+  width: 420px;
+}
+.about__content--image {
+  width: fit-content;
+}
+.about__content--image > img {
+  width: 420px;
+}
+
+/* service -----------------------------------*/
+.service {
+  width: 960px;
+  margin: 20px auto;
+}
+.service__title {
+  /* text-align: center; */
+  padding-top: 40px;
+}
+.service__title > p {
+  color: red;
+  font-size: 1.2rem;
+  font-family: "Architects Daughter", cursive;
+}
+.service__title > h2 {
+  font-size: 1.5rem;
+  margin-top: 16px;
+}
+.service-content {
+  display: grid;
+  grid-template-rows: 200px 200px;
+  grid-template-columns: 1fr 1fr;
+}
+.service-card:nth-of-type(1) {
+  grid-column: 1/2;
+  grid-row: 1/3;
+  background-color: rgb(165, 3, 3);
+  text-align: center;
+  padding-top: 40px;
+}
+.service-card:nth-of-type(2) {
+  grid-column: 2/3;
+  grid-row: 1/2;
+  background-color: rgb(190, 92, 166);
+  display: flex;
+  justify-content: flex-start;
+}
+.service-card:nth-of-type(3) {
+  grid-column: 2/3;
+  grid-row: 2/3;
+  background-color: rgb(163, 111, 157);
+  display: flex;
+  justify-content: flex-start;
+}
+.service-card__img {
+  width: 120px;
+  margin-bottom: 12px;
+  margin-left: 12px;
+}
+.service-card__text {
+  margin-top: 42px;
+  margin-left: 12px;
+  width: 280px;
+}
+.service-card__text > p {
+  color: #fff;
+}
+
+.service-card__paragraph {
+  color: #fff;
+}
+.service-card__paragraph-wrapper {
+  margin: 0 auto;
+  width: 360px;
+}
+.service-card__paragraph--left-align {
+  text-align: left;
+  color: #fff;
+}
+
+.service-card__paragraph--bold {
+  margin-bottom: 12px;
 }
