--- a/style.css
+++ b/style.css
@@ -165,16 +165,16 @@ header {
   width: 960px;
   margin: 20px auto;
 }
-.service__title {
+.service-title {
   /* text-align: center; */
   padding-top: 40px;
 }
-.service__title > p {
+.service-title > p {
   color: red;
   font-size: 1.2rem;
   font-family: "Architects Daughter", cursive;
 }
-.service__title > h2 {
+.service-title > h2 {
   font-size: 1.5rem;
   margin-top: 16px;
 }
@@ -182,6 +182,7 @@ header {
   display: grid;
   grid-template-rows: 200px 200px;
   grid-template-columns: 1fr 1fr;
+  margin-top: 32px;
 }
 .service-card:nth-of-type(1) {
   grid-column: 1/2;
@@ -232,4 +233,73 @@ header {
 
 .service-card__paragraph--bold {
   margin-bottom: 12px;
+}
+
+/* blog --------------------------------------*/
+.blog {
+  background-color: #f2f2f2;
+}
+.blog-wrapper {
+  width: 960px;
+  margin: 20px auto;
+}
+.blog-title {
+  /* text-align: center; */
+  padding-top: 40px;
+}
+.blog-title > p {
+  color: red;
+  font-size: 1.2rem;
+  font-family: "Architects Daughter", cursive;
+}
+.blog-title > h2 {
+  font-size: 1.5rem;
+  margin-top: 16px;
+}
+.blog-list {
+  display: flex;
+  justify-content: space-between;
+}
+.blog-card {
+  width: 280px;
+  height: 320px;
+  background: #fff;
+  border-radius: 24px;
+  margin: 40px 0;
+}
+.blog-card__chip {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.blog-card__img {
+  border-radius: 24px 24px 0 0;
+  margin: 0;
+  width: 100%;
+  height: 160px;
+}
+.blog-card__text {
+  margin: 15px;
+}
+.blog-card__title {
+  font-weight: bold;
+}
+.blog-card__date-tag {
+  margin-top: 50px;
+  display: flex;
+  justify-content: space-between;
+}
+.blog-card__date-tag > p {
+  font-size: 14px;
+}
+.blog-link {
+  text-align: center;
+}
+.blog-link__btn {
+  padding: 10px 20px;
+  border: 2px solid rgb(165, 3, 3);
+  border-radius: 24px;
+  color: rgb(165, 3, 3);
+  margin-bottom: 40px;
+  background: #fff;
 }
