--- a/style.css
+++ b/style.css
@@ -6,6 +6,14 @@
   color: grey;
   box-sizing: border-box;
 }
+:root {
+  --main-color: rgb(177, 2, 119);
+}
+.link {
+  text-decoration: none;
+}
+.link:hover {
+}
 main {
   width: 100vw;
 }
@@ -51,7 +59,7 @@ header {
 .topview__text--title {
   font-size: 4rem;
   font-family: "Architects Daughter", cursive;
-  color: red;
+  color: var(--main-color);
 }
 .topview__text--title > span {
   font-size: 4rem;
@@ -62,7 +70,7 @@ header {
   font-size: 1.3rem;
   font-family: "Noto Sans JP", sans-serif;
   font-weight: bold;
-  color: red;
+  color: var(--main-color);
   margin-top: 50px;
 }
 .topview__text--subtitle > span {
@@ -92,7 +100,7 @@ header {
 }
 
 .news__title > p {
-  color: red;
+  color: var(--main-color);
   font-size: 1.2rem;
   font-family: "Architects Daughter", cursive;
 }
@@ -119,7 +127,7 @@ header {
 .news__table--tag > p {
   width: fit-content;
   padding: 0px 12px;
-  background-color: rgb(183, 29, 2);
+  background-color: var(--main-color);
   border-radius: 10px;
   color: #fff;
 }
@@ -135,7 +143,7 @@ header {
 }
 
 .about__title > p {
-  color: red;
+  color: var(--main-color);
   font-size: 1.2rem;
   font-family: "Architects Daughter", cursive;
 }
@@ -170,7 +178,7 @@ header {
   padding-top: 40px;
 }
 .service-title > p {
-  color: red;
+  color: var(--main-color);
   font-size: 1.2rem;
   font-family: "Architects Daughter", cursive;
 }
@@ -187,7 +195,7 @@ header {
 .service-card:nth-of-type(1) {
   grid-column: 1/2;
   grid-row: 1/3;
-  background-color: rgb(165, 3, 3);
+  background-color: var(--main-color);
   text-align: center;
   padding-top: 40px;
 }
@@ -238,6 +246,7 @@ header {
 /* blog --------------------------------------*/
 .blog {
   background-color: #f2f2f2;
+  margin-top: 80px;
 }
 .blog-wrapper {
   width: 960px;
@@ -248,7 +257,7 @@ header {
   padding-top: 40px;
 }
 .blog-title > p {
-  color: red;
+  color: var(--main-color);
   font-size: 1.2rem;
   font-family: "Architects Daughter", cursive;
 }
@@ -266,11 +275,16 @@ header {
   background: #fff;
   border-radius: 24px;
   margin: 40px 0;
+  position: relative;
 }
 .blog-card__chip {
+  padding: 2px 10px;
   position: absolute;
   top: 0;
   left: 0;
+  color: #fff;
+  background-color: var(--main-color);
+  border-radius: 24px 0 0 0;
 }
 .blog-card__img {
   border-radius: 24px 24px 0 0;
@@ -297,9 +311,44 @@ header {
 }
 .blog-link__btn {
   padding: 10px 20px;
-  border: 2px solid rgb(165, 3, 3);
+  border: 2px solid var(--main-color);
   border-radius: 24px;
-  color: rgb(165, 3, 3);
+  color: var(--main-color);
   margin-bottom: 40px;
   background: #fff;
+}
+
+/* company ---------------------------------------*/
+.company {
+  width: fit-content;
+  margin: 0 auto;
+}
+
+.company-title {
+  /* text-align: center; */
+  padding-top: 40px;
+}
+.company-title > p {
+  color: var(--main-color);
+  font-size: 1.2rem;
+  font-family: "Architects Daughter", cursive;
+}
+.company-title > h2 {
+  font-size: 1.5rem;
+  margin-top: 16px;
+}
+.company-table {
+  width: 640px;
+  height: 320px;
+  border-collapse: collapse;
+}
+.company-table th {
+  background-color: #f2f2f2;
+  border: grey solid 0.5px;
+  text-align: left;
+  padding-left: 10px;
+}
+.company-table td {
+  border: grey solid 0.5px;
+  padding-left: 10px;
 }
